--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,28 +40,27 @@
                         <input type="password" name="password" id="inputPassword" class="form-control" required>
                     </div>
                 </div>
-            </div>
 
-            <input type="hidden" name="_csrf_token"
-                   value="{{ csrf_token('authenticate') }}"
-            >
+                <input type="hidden" name="_csrf_token"
+                       value="{{ csrf_token('authenticate') }}"
+                >
 
+                {#
+                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                    See https://symfony.com/doc/current/security/remember_me.html
 
-            {#
-                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                See https://symfony.com/doc/current/security/remember_me.html
-
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" name="_remember_me"> Remember me
-                    </label>
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" name="_remember_me"> Remember me
+                        </label>
+                    </div>
+                #}
+                <div class="row  justify-content-center">
+                    <button class="third-button" type="submit">
+                        Connecte-toi
+                    </button>
                 </div>
-            #}
-
-            <button class="fourth-button" type="submit">
-                Connecte-toi
-            </button>
-
+            </div>
         </form>
 
         <p>Pas encore de compte ?</p>
