--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         <header>
             <div class="row mb-5">
                 <div class="col col-md-8 text-center pt-3">
-                    <a href="{{ path('home') }}" class="logo-bipbip"><img src="{{ asset('/images/new-logo-bipbip.png') }}"
+                    <a href="{{ path('home') }}" class="logo-bipbip"><img src="{{ asset('/images/logo-bipbip.png') }}"
                                                                           alt="BipBip ton Green Mobile" /></a>
                 </div>
                 <div class="d-none col-md-4">
@@ -25,6 +25,23 @@
                     <div class="row align-items-center justify-content-end">
                         <div class="col col-md-5 col-lg-3">
                             <img src="{{ asset('images/perso-bipbip.png') }}" alt="Téléphone" id="phone-menu"/>
+                            <div class="user-infos-menu">
+                                {% if app.user %}
+                                    <a href="{{ path('user_show', { 'id':app.user.id}) }}" class="disconnection">
+                                        <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
+                                    </a>
+                                    <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
+
+                                    {% for role in app.user.roles %}
+                                        {% if role == "ROLE_COLLECTOR" or role == "ROLE_ADMIN" %}
+                                            <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="fourth-button">Accéder à la plateforme d'administration</a>
+                                        {% endif %}
+                                    {% endfor %}
+
+                                {% else %}
+                                    <a href="{{ path('app_login') }}" class="connect"> Se connecter / s'inscrire</a>
+                                {% endif %}
+                            </div>
                         </div>
                         <div class="col col-md-5 col-lg-4">
                             <ul>
@@ -42,23 +59,6 @@
                                 <li class="primary-title-menu"><a href="{{ path("faq_index") }}" title="FAQ">FAQ</a></li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="user-infos-menu">
-                        {% if app.user %}
-                            <a href="{{ path('user_show', { 'id':app.user.id}) }}" class="disconnection">
-                                <h3 class="user_name">{{ app.user.firstname }} {{ app.user.lastname }}</h3>
-                            </a>
-                            <a href="{{ path('app_logout') }}" class="disconnection"> Se déconnecter</a>
-
-                            {% for role in app.user.roles %}
-                                {% if role == "ROLE_COLLECTOR" or role == "ROLE_ADMIN" %}
-                                    <a href="{{ path('estimations_index') }}" title="plateforme d'administration" class="fourth-button">Accéder à la plateforme d'administration</a>
-                                {% endif %}
-                            {% endfor %}
-
-                        {% else %}
-                            <a href="{{ path('app_login') }}" class="connect"> Se connecter / s'inscrire</a>
-                        {% endif %}
                     </div>
                 </nav>
             </div>
