--- a/templates/estimation/autres.html.twig
+++ b/templates/estimation/autres.html.twig
@@ -2,10 +2,18 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col-10 mx-auto text-center form p-4">
-                <h1 class="primary-title">Estime ton tel</h1>
-                <p class="alert alert-danger">Désolé, ton téléphone n'est pas repris par Bip Bip Mobile, reviens plus tard, nous aurons une liste qui pourrait t'intéresser.</p>
-                <a class="btn btn-success" href="{{ path('home') }}">Retour à l'accueil</a>
+            <div class="col-8 mx-auto text-center">
+                <h1 class="primary-title">Désolé...</h1>
+                <p class="alert alert-danger">Désolé, ton téléphone n'est pas repris par BipBip actuellement,
+                    reviens plus tard, nous aurons une liste qui pourrait t'intéresser.</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-5 text-center p-1">
+                <a class="secondary-button" href="{{ path('new_estimation') }}">Autre estimation ?</a>
+            </div>
+            <div class="col-5 text-center p-1">
+                <a class="primary-button" href="{{ path('home') }}">Retour à l'accueil</a>
             </div>
         </div>
     </div>
