--- a/templates/estimation/model.html.twig
+++ b/templates/estimation/model.html.twig
@@ -3,16 +3,20 @@
     <div class="container">
         <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <h1 class="primary-title">Sélectionne ton modèle</h1>
-                <h2 class="text-dark">{{ brand.brand }}</h2>
-                {% for model in models %}
-                    <a class="btn btn-success mb-3" href="/estimation/{{ brand.brand }}/{{ model }}">{{ model }}</a>
-                {% endfor %}
+                <h1 class="primary-title">Quel est ton modèle ?</h1>
+                <h4 class="text-dark">Marque : {{ brand.brand }}</h4>
             </div>
         </div>
         <div class="row">
+            {% for model in models %}
+            <div class="col mx-auto text-center p-1">
+                <a class="primary-button" href="/estimation/{{ brand.brand }}/{{ model }}">{{ model }}</a>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="row">
             <div class="col-12 mx-auto text-center form p-4">
-                <a class="btn btn-primary" href="{{ path("autres") }}">Autres...</a>
+                <a class="third-button" href="{{ path("autres") }}">Autre modèle</a>
             </div>
         </div>
     </div>
