--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -5,13 +5,11 @@
 {% endblock %}
 {% block body %}
 <main id="final_estimation">
-    <div class="container jumbotron p-3">
+    <div class="container p-3">
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="primary-title">Dernière étape</h1>
-                <h2 class="text-dark">{{ brand }}</h2>
-                <h3 class="text-dark">{{ model }}</h3>
-                <h4 class="text-dark">{{ capacity }} Go</h4>
+                <h4 class="text-dark">Modèle : {{ brand }} - {{ model }} - {{ capacity }} Go</h4>
             </div>
         </div>
     </div>
@@ -115,13 +113,16 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                {{ form_row(form.submit, {'label': 'Valider', 'class': 'btn btn-primary'}) }}
+                {{ form_row(form.submit, {'label': 'Valider', 'class': 'primary-button'}) }}
                 {{ form_end(form) }}
             </div>
         </div>
     </div>
-
-    <a class="secondary-button" href="{{ path("home") }}">Retour à l'accueil</a>
+    <div class="row">
+        <div class="col text-center">
+            <a class="secondary-button" href="{{ path("home") }}">Retour à l'accueil</a>
+        </div>
+    </div>
 
 </main>
 {% endblock %}
