Create team page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -115,7 +115,7 @@
                     <div class="font-weight-bold pb-2">
                         A propos de BipBip<br>
                     </div>
-                    <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
+                    <a href="{{ path('team') }}" title="Page qui-sommes-nous">
                         Qui sommes-nous ?
                     </a><br>
                     <a href="{{ path('qui-sommes-nous') }}" title="Page qui-sommes-nous">
