Add content to team page

--- a/templates/infos/bipbip.html.twig
+++ b/templates/infos/bipbip.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Qui sommes-nous ?{% endblock %}
+{% block title %}Notre mission{% endblock %}
 
 {% block body %}
     <main class="container">
