--- a/templates/infos/team.html.twig
+++ b/templates/infos/team.html.twig
@@ -7,6 +7,49 @@
         <div class="row">
             <div class="col">
                 <h1 class="primary-title">La team Bipbip</h1>
+
+                <h2>Natacha – Chef de Projet</h2>
+                <p>
+                    Bonne vivante aussi bien au travail que dans la vie de tous les jours, son rire ne passera pas inaperçu.
+                    Elle sait gérer l’équipe autour d’un bon café, c’est elle l’ADN du projet.
+                </p>
+                <h2>Paul – Responsable Opérationnel</h2>
+                <p>
+                    Son calme légendaire cache une puissance technique, qui fait trembler les plus grands de ce monde.
+                </p>
+                <h2>Gautier - Chargé de Projet</h2>
+                <p>
+                    Toujours de bonne humeur notre étudiant de l’EDHEC a plus d’un tour dans son sac.
+                    Il dégaine le contact aussi vite que son ombre.
+                </p>
+                <h2>Clothilde – Community Manager</h2>
+                <p>
+                    Notre petite blonde en alternance, pleine de vie et d’envies elle anime nos réseaux.
+                    Sa douceur n’a d’égale que son sourire, elle saura te redonner un coup de boost.
+                </p>
+                <h2>Guillaume – Dessinateur</h2>
+                <p>
+                    Jeune ambitieux, qui n’a pas peur d’entreprendre son activité du haut de ses 16 ans !
+                </p>
+                <h2>Corinne – Graphiste</h2>
+                <p>
+                    Aussi sereine que bienveillante, elle est toujours dispo’ pour donner vie à nos projets.
+                </p>
+                <h2>Gaëlle</h2>
+                <p>
+                    Aussi énergique que directe, elle va droit au but. Le management et la mode n’ont aucun secret pour elle.
+                </p>
+                <h2>L’équipe des Wilders</h2>
+                <p>
+                    Nos 5 étudiants en développement web de la Wild Code School ont su donner vie à notre superbe site internet.
+                    On se souviendra de nos réunions en chaussettes et d’une équipe exprime le meilleur d’eux même.
+                    A travers les différentes personnalités de chacun nous avons su travailler main dans la main.
+                </p>
+                <h2>Les étudiants de l’IFAG</h2>
+                <p>
+                    Nos futurs managers de l’IFAG ont su nous donner un coup de pouce pour rendre notre projet
+                    encore plus innovant.
+                </p>
             </div>
         </div>
     </main>
