Can close flash messages, for user and admin areas

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -90,11 +90,21 @@
     {% for message in app.flashes('success') %}
         <div class="alert alert-success text-center">
             {{ message }}
+            <a href="{{ path(app.request.attributes.get('_route')) }}" alt="Fermer">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </a>
         </div>
     {% endfor %}
     {% for message in app.flashes('danger') %}
         <div class="alert alert-danger text-center">
             {{ message }}
+            <a href="{{ path(app.request.attributes.get('_route')) }}" alt="Fermer">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </a>
         </div>
     {% endfor %}
 
