Ajusting some buttons, center some text

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -86,7 +86,7 @@ a{
     min-width : 150px;
     max-width: 230px;
     border-radius: 25px;
-    margin : 0;
+    margin : auto;
     padding : 12px;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
