--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -44,7 +44,7 @@
                 {{ form_row(form.agreeTerms, {'label': 'Aucune donnée personnelle n\’est conservée par notre site via
                 ce formulaire, mais tu acceptes que BipBip te recontacte afin de répondre à ta demande.', 'required': true}) }}
             </div>
-            <div class="offset-sm-2 col-sm-8 offset-sm-2">
+            <div class="offset-sm-2 col-sm-8 offset-sm-2 text-center">
                 {{ form_row(form.save, {'label': 'Envoyer le message', 'attr': {'class': 'fourth-button'}}) }}
             </div>
         {{ form_end(form) }}
