--- a/templates/organisms/index.html.twig
+++ b/templates/organisms/index.html.twig
@@ -17,7 +17,8 @@
 
             <article>
                 <a class="logo" href="{{ path('organisms_show', {'id' : organism.id}) }}">
-                    <img title="{{ organism.organismName }}" src="/uploads/Logos/Logos/{{ organism.logo }}" alt="{{ organism.organismName }}" ></a>
+                    <img title="{{ organism.organismName }}" src="/uploads/Logos/Logos/{{ organism.logo }}"
+                         alt="{{ organism.organismName }}" class="img-fluid"></a>
 
             </article>
 
