--- a/templates/organisms/show.html.twig
+++ b/templates/organisms/show.html.twig
@@ -16,7 +16,7 @@
 
 
         <div class="partnerInfo">
-            <p>{{ organism.description }}</p>
+            <p class="text-left">{{ organism.description }}</p>
 
             <div class="desBlock">
                 <p>{{ organism.organismAddress }}</p>
