--- a/templates/user/choiceEnvoi.html.twig
+++ b/templates/user/choiceEnvoi.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container col-10 d-flex flex-wrap justify-content-between mt-5">
         <div class="card col-5 mt-2 mb-2 border-dark">
-            <img src="/images/echange-tel.png" class="card-img-top" alt="...">
+            <img src="{{ asset('/images/echange-tel.png') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title text-center">
                     DEPOT
@@ -13,36 +13,40 @@
                     En cliquant sur "Trouver un point de collecte", tu seras redirigé vers
                     la page te proposant différentes collectes disponibles
                 </p>
-                <a class="btn btn-info" href="{{ path('show_collect') }}">
-                    Trouver un point de collecte
-                </a>
+                <p class="text-center">
+                    <a class="primary-button m-auto" href="{{ path('show_collect') }}">
+                        Trouver un point de collecte
+                    </a>
+                </p>
             </div>
         </div>
 
-        <div class="card col-5 mt-2 mb-2 border-dark">
-            <img src="/images/chronopost-colis.png" class="card-img-top" alt="...">
+        <div class="card col-5 mt-2 mb-2 border-dark justify-content-center">
+            <img src="{{ asset('/images/chronopost-colis.png') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title text-center">
                     CHRONOPOST
                 </h5>
                 <p class="card-text text-center">
-                    Avec BipBip il est possible de te générer une étiquette chronopost à
+                    Avec BipBip il est possible de te générer une étiquette Chronopost à
                     coller sur ton colis et l'envoyer directement à notre dépot.
                 </p>
-                <a class="btn btn-info" href="{{ path('envoi_chronopost', {'user': user, 'id': estimation.id} ) }}">
-                    Envoie par chronopost
-                </a>
+                <p class="text-center">
+                    <a class="primary-button m-auto" href="{{ path('envoi_chronopost', {'user': user, 'id': estimation.id} ) }}">
+                        Envoi par Chronopost
+                    </a>
+                </p>
             </div>
         </div>
         <div class="col-12">
             <p class="card-text text-danger text-center font-italic mt-3 mb-5">
                 Le paiement sera
-                effectué lors de la réception du téléphone et la validation de l'état indiqué lors de
+                effectué lors de la réception du téléphone après validation de l'état indiqué lors de
                 ton estimation.
             </p>
         </div>
-       <a href="{{ path('user_show', {'id': user.id }) }}" class="btn btn-success m-auto">
-           Retour au profil
+       <a href="{{ path('user_show', {'id': user.id }) }}" class="secondary-button m-auto">
+           Mon profil
        </a>
     </div>
 
