--- a/templates/user/confirmCollect.html.twig
+++ b/templates/user/confirmCollect.html.twig
@@ -33,11 +33,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6 mt-5">
-                <a class="btn fourth-button" href="{{ path('organisms_index') }}">Voir nos partenaires</a>
+            <div class="col-6 mt-5 text-center">
+                <a class="fourth-button" href="{{ path('organisms_index') }}">Voir nos partenaires</a>
             </div>
-            <div class="col-6 mt-5">
-                <a class="btn fourth-button" href="{{ path('home') }}">Retour à l'accueil</a>
+            <div class="col-6 mt-5 text-center">
+                <a class="fourth-button" href="{{ path('home') }}">Retour à l'accueil</a>
             </div>
         </div>
     </main>
