--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -88,7 +88,7 @@
 </div>
 
     {% for message in app.flashes('success') %}
-        <div class="alert alert-success text-center">
+        <div class="alert alert-success text-center mt-1 alert-dismissible fade show">
             {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -96,7 +96,7 @@
         </div>
     {% endfor %}
     {% for message in app.flashes('danger') %}
-        <div class="alert alert-danger text-center">
+        <div class="alert alert-danger text-center mt-1 alert-dismissible fade show">
             {{ message }}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
