Add icons in collects for admin or collector about time or chronopost

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -409,3 +409,20 @@ body{
     text-decoration: none;
 }
 
+/* ADMIN ESTIMATIONS */
+
+.icon-green {
+    color:green;
+}
+
+.icon-orange {
+    color:orange;
+}
+
+.icon-red {
+    color:red;
+}
+
+.icon-blue {
+    color:blue;
+}
