--- a/templates/user/showCollect.html.twig
+++ b/templates/user/showCollect.html.twig
@@ -20,10 +20,12 @@
                     </a>
                 </div>
             {% endif %}
+        {% else %}
+            <p>Voici les collectes publiques. En te connectant, tu auras accès aux collectes de ton école ou de ton entreprise.</p>
         {% endif %}
         {%  if collects is empty %}
             <div class="container">
-                <div class="row align-items-center mt-5">
+                <div class="row align-items-center mt-3">
                     <div class="offset-2 col-8 text-center">
                         Désolé, aucune collecte n'est programmée pour l'instant.
                     </div>
@@ -35,7 +37,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="row align-items-center mt-5">
+                <div class="row align-items-center mt-3">
                     <div class="offset-2 col-8 text-center">
                         Ton estimation est sauvegardée sur
                         <a href="{{ path('user_show', { id:app.user.id}) }}">
@@ -43,9 +45,7 @@
                         </a>.
                     </div>
                 </div>
-                <div class="row align-items-center mt-5">
-                    </div>
-                </div>
+            </div>
         {% else %}
             <div class="container">
                 <div class="row align-items-center table-head rounded-top">
