Add some links in burger menu, and arrange colors in admin

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -208,13 +208,13 @@ header{
             .primary-title-menu-color {
                 font-family: $third-font;
                 color: $primary-color;
-                font-size: 2rem;
+                font-size: 1.6rem;
             }
 
             .primary-title-menu {
                 font-family: $third-font;
-                font-weight: normal;
-                font-size: 1.4rem;
+                font-weight: lighter;
+                font-size: 1.2rem;
                 color : black;
             }
         }
