--- a/assets/scss/faq.scss
+++ b/assets/scss/faq.scss
@@ -27,7 +27,7 @@
     font-size : 1rem;
     padding: 15px;
     border-radius: 5px;
-    background-color : $secondary-color;
+    background-color : $primary-color;
     opacity: 0.9;
     color : white;
     cursor: pointer;
