Pass color head tables to primary

--- a/assets/scss/admin-tables.scss
+++ b/assets/scss/admin-tables.scss
@@ -40,7 +40,7 @@
         }
 
         .table-head {
-            background-color: $secondary-color;
+            background-color: $primary-color;
             color: white;
             padding: 10px;
         }
@@ -98,7 +98,7 @@
         width: 70%;
 
         #table-head {
-            background-color: $secondary-color;
+            background-color: $primary-color;
             color: white;
             padding: 10px;
             height: 80px;
