Routing debug, admin redirect

--- a/templates/estimation/quest.html.twig
+++ b/templates/estimation/quest.html.twig
@@ -83,7 +83,7 @@
                 <img class="bubble-info-img" src="{{ asset('/images/info.png') }}" alt="">
                 <div class="bubble-info-bg">
                 </div>
-                <p class="bubble-info-txt">Si tu as l'impression de devoir recherger ton téléphone tous les jours, coche 'oui'</p>
+                <p class="bubble-info-txt">Si tu as l'impression de devoir recharger ton téléphone tous les jours, coche 'oui'</p>
             </div>
         </div>
         <div class="row">
